<resources>
    <string name="app_name">FastLyrics</string>

    <!-- Nav drawer -->

    <string name="menu_lyrics">Lyrics</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_search">Search</string>
    <string name="menu_permission">Notification Permission</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- Menu strings -->
    <string name="menu_copy_lyrics_to_clipboard">Copy lyrics to clipboard</string>

    <!-- Lyrics View -->
    <string name="no_song_playing">You\'re not listening to any music right now</string>
    <string name="lyrics_not_found">Could not find lyrics for this song</string>
    <string name="lyrics_parse_exception">Could not parse lyrics</string>
    <string name="lyrics_network_exception">There was a network problem while loading lyrics</string>
    <string name="lyrics_unknown_error">An unknown error occurred</string>

    <string name="synced_lyrics_available">Synced lyrics available</string>

    <string name="lyrics_provider_over_line">Lyrics from</string>

    <string name="copy">Copy</string>
    <string name="lyrics_clipboard_label">Lyrics</string>

    <string name="share">Share</string>
    <string name="share_title">Lyrics for %1$s - %2$s</string>

    <!-- Saved songs view -->
    <string name="delete">Delete</string>
    <plurals name="items_selected">
        <item quantity="other">%d selected</item>
    </plurals>

    <!-- Notification permissions -->
    <string name="permission_description">FastLyrics needs access to your device\'s notifications in order to find out what song is currently playing. You can allow this in the settings by clicking the button below</string>
    <string name="permission_tip">Tip: In newer versions of Android you can  individually select what FastLyrics has access to. You can deselect everything because FastLyrics doesn\'t actually access any notifications</string>
    <string name="permission_goto_settings">Go to settings</string>
    <string name="permission_comeback">You can always come back here and enable/disable notification access if you can\'t find the right place in your system settings</string>

    <!-- Settings -->
    <string name="appearance_header">Appearance</string>
    <string name="behavior_header">Behavior</string>
    <string name="preference_material_style">Material Style</string>
    <string name="preference_app_theme">App theme</string>
    <string name="preference_auto_refresh">Auto refresh lyrics</string>
    <string name="preference_auto_refresh_description">Automatically refresh lyrics when the music changes</string>
    <string name="preference_text_size">Lyrics text size</string>
    <string name="preference_synced_lyrics_by_default">Synced lyrics by default</string>

    <!-- About -->
    <string name="source_code">Source code</string>
    <string name="lyrics_sources">Lyrics sources</string>

    <string name="source_genius" translatable="false">Genius</string>
    <string name="source_deezer" translatable="false">Deezer</string>
    <string name="source_lrclib" translatable="false">LRCLIB</string>
    <string name="source_petitlyrics" translatable="false">PetitLyrics</string>
    <string name="source_netease" translatable="false">Netease</string>

    <string name="source_code_url" translatable="false">https://github.com/TecCheck/FastLyrics</string>
    <string name="source_url_genius" translatable="false">https://genius.com/</string>
    <string name="source_url_deezer" translatable="false">https://deezer.com/</string>
    <string name="source_url_lrclib" translatable="false">https://lrclib.net/</string>
    <string name="source_url_petitlyrics" translatable="false">https://petitlyrics.com/</string>
    <string name="source_url_netease" translatable="false">https://music.163.com/</string>

    <!-- Notification listener service -->
    <string name="notification_access">Fastlyrics song metadata access</string>
</resources>