<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/behavior_header">
        <SwitchPreference
            android:defaultValue="false"
            android:key="auto_refresh"
            android:title="@string/preference_auto_refresh"
            app:summary="@string/preference_auto_refresh_description" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="synced_lyrics_by_default"
            android:title="@string/preference_synced_lyrics_by_default" />

        <PreferenceScreen
            android:fragment="io.github.teccheck.fastlyrics.ui.settings.ProviderSettingsFragment"
            app:title="Provider Settings" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">

        <SeekBarPreference
            android:max="24"
            android:title="@string/preference_text_size"
            app:defaultValue="18"
            app:key="text_size"
            app:min="10"
            app:showSeekBarValue="true" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/app_theme"
            android:entryValues="@array/app_theme_values"
            android:key="app_theme"
            android:title="@string/preference_app_theme"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/material_style"
            app:entryValues="@array/material_style_values"
            app:key="material_style"
            app:title="@string/preference_material_style"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>