<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_fast_lyrics">

    <fragment
        android:id="@+id/nav_fast_lyrics"
        android:name="io.github.teccheck.fastlyrics.ui.fastlyrics.FastLyricsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_fast_lyrics" />
    <fragment
        android:id="@+id/nav_saved"
        android:name="io.github.teccheck.fastlyrics.ui.saved.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />
    <fragment
        android:id="@+id/nav_view_lyrics"
        android:name="io.github.teccheck.fastlyrics.ui.viewlyrics.ViewLyricsFragment"
        android:label="@string/menu_lyrics"
        tools:layout="@layout/fragment_view_lyrics" />
    <fragment
        android:id="@+id/nav_permission"
        android:name="io.github.teccheck.fastlyrics.ui.permission.PermissionFragment"
        android:label="@string/menu_permission"
        tools:layout="@layout/fragment_permission" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="io.github.teccheck.fastlyrics.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />
    <fragment
        android:id="@+id/nav_about"
        android:name="io.github.teccheck.fastlyrics.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>