<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/app_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    app:shapeAppearanceOverlay="@style/Theme.FastLyrics.Material2.ShapeRound"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                    <TextView
                        android:id="@+id/text_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="v1.0" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_source_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_code_24"
                    app:tint="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/source_code"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/lyrics_sources"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layout_source_genius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/genius"
                        app:tint="?android:attr/textColorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/source_genius"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout_source_deezer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/deezer"
                        app:tint="?android:attr/textColorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/source_deezer"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_source_lrclib"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/lrclib"
                        app:tint="?android:attr/textColorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/source_lrclib"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>